# mcp-home-simulator

./: .gitignore  EJEMPLOS.md  IMPLEMENTACION.md  LICENSE  README.md  config.yaml  pyproject.toml  test_input.json  test_mcp_stdio.ps1
docs/: protocol.md  roadmap.md
src/mcp_home_simulator/: __init__.py  __main__.py  app.py  cli.py  config.py  mcp_stdio.py  state.py  tools.py
tests/: __init__.py  test_cli.py  test_mcp.py  test_state.py
